--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 		<div class="nav-collapse collapse navbar-responsive-collapse">
 			<ul class="nav navbar-nav">
 				<li class="active">
-					<a href="http://www.fedu.org/"><span class="glyphicon glyphicon-home">Home</span></a>
+					<a href="http://www.fedu.org/"><span class="glyphicon glyphicon-home">&nbsp Home</span></a>
 				</li>
 				
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-road">Services </span><strong class="caret"></strong></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-road">&nbsp Services </span><strong class="caret"></strong></a>
 					
 					<ul class="dropdown-menu">
 						<li>
